--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <p id="socialfooter"><b>SOCIAL MEDIA </b></p>
           <div class="social">
             <a href="https://www.instagram.com/khameer_13/"><img
-                src="images/instagram.jpg" alt="INSTAGRAM!" />
+                src="images/Instagram.jpg" alt="INSTAGRAM!" />
             </a>
             <a href="https://www.facebook.com/khameerMk"><img
                 src="images/facebook.jpg" alt="FACEBOOK" />
