--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           </div>
 
           <div class="items" id="mypic">
-            <img src="images/protfolio.jpeg" alt="IMAGE NOT FOUND!" />
+            <img src="images/protfolio1.jpeg" alt="IMAGE NOT FOUND!" />
           </div>
         </div>
 
