--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="sidebar">
         <a href="#home">HOME</a>
         <a href="https://wa.me/919110804206?text=contact%20info">CONTACT</a>
-        <a href="https://docs.google.com/document/d/1N14IWf_Yb-6uqb5ibc7yOMfrx7quMxNt/edit?usp=drivesdk&ouid=104662745155579858214&rtpof=true&sd=true">RESUME</a>
+        <a href="https://drive.google.com/file/d/1IUV1T3Nl1ZBifRM8SUJ-1zIRNuCv6WJX/view?usp=drivesdk">RESUME</a>
         <a href="https://github.com/khameer13?tab=repositories">GITHUB</a>
       </div>
     </nav>
