--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a href="#home">HOME</a>
         <a href="https://wa.me/919110804206?text=contact%20info">CONTACT</a>
         <a href="https://drive.google.com/file/d/1IUV1T3Nl1ZBifRM8SUJ-1zIRNuCv6WJX/view?usp=drivesdk">RESUME</a>
-        <a href="https://github.com/khameer13?tab=repositories">GITHUB</a>
+        <!-- <a href="https://github.com/khameer13?tab=repositories">GITHUB</a> -->
       </div>
     </nav>
     <div class="content">
@@ -38,7 +38,7 @@
           </div>
 
           <div class="items" id="mypic">
-            <img src="images/protfolio1.jpeg" alt="IMAGE NOT FOUND!" />
+            <a href="https://github.com/khameer13"> <img src="images/projects.jpeg" alt="IMAGE NOT FOUND!" /> </a>
           </div>
         </div>
 
