--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
 
   </head>
 
+
   <body>
     <nav>
       <div class="sidebar">
         <a href="#home">HOME</a>
         <a href="https://wa.me/919110804206?text=contact%20info">CONTACT</a>
         <a href="https://drive.google.com/file/d/1IUV1T3Nl1ZBifRM8SUJ-1zIRNuCv6WJX/view?usp=drivesdk">RESUME</a>
+        <a href="projects.html">PROJECTS</a>
         <!-- <a href="https://github.com/khameer13?tab=repositories">GITHUB</a> -->
       </div>
     </nav>
@@ -34,7 +36,7 @@
             to be a full-stack developer in the coming
             years.
             <p class="me3">This blog is intended to showcase my skills,
-              knowledge, and experiences as an engineer.</p>
+              knowledge, and experiences as an Developer.</p>
           </div>
 
           <div class="items" id="mypic">
