Added_projects_section

--- a/LoginDashboardProject.html
+++ b/LoginDashboardProject.html
@@ -1,35 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style1.css" />
-</head>
-<body>
-    project 2
+  </head>
+  <body>
+    <!-- <section class="hero"> -->
+    <h1>LoginDashboard</h1>
+    <!-- </section> -->
 
 
     <main>
-        <!-- <h1> <b>MY CERTIFICATION</b></h1> -->
-        <img src="images/python.jpg" class="slide" alt="">
-        <img src="images/ai.jpg" class="slide" alt="">
-        <img src="images/datascience.jpg" class="slide" alt="">
+
+      <img src="LoginDashboard/loginDashboard1.png" class="slide" alt="">
+      <img src="LoginDashboard/loginDashboard2.png" class="slide" alt="">
+      <img src="LoginDashboard/loginDashboard3.png" class="slide" alt="">
+      <img src="LoginDashboard/loginDashboard4.png" class="slide" alt="">
+      <img src="LoginDashboard/loginDashboard5.png" class="slide" alt="">
+      <img src="LoginDashboard/loginDashboard6.png" class="slide" alt="">
+      <img src="LoginDashboard/loginDashboard7.png" class="slide" alt="">
+      <img src="LoginDashboard/loginDashboard8.png" class="slide" alt="">
+      <img src="LoginDashboard/loginDashboard9.png" class="slide" alt="">
+    </main>
+
+    <div class="btn">
+      <button onclick="goPrev()">
+        &#8592
+      </button>
+      <button onclick="goNext()">
+        &#8594
+      </button>
+    </div>
 
 
-      </main>
-
-      <div class="btn">
-        <button onclick="goPrev()">
-          &#8592
-        </button>
-        <button onclick="goNext()">
-          &#8594
-        </button>
-      </div>
-
-
-   <script src="myscripts.js"></script>
-</body>
+    <script src="myscripts.js"></script>
+  </body>
 </html>
