--- a/chatRoom.html
+++ b/chatRoom.html
@@ -1,12 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
-<body>
-    chat
-</body>
+    <link rel="stylesheet" href="style1.css" />
+  </head>
+  <body>
+    <!-- <section class="hero"> -->
+    <h1>CHAT ROOM</h1>
+    <!-- </section> -->
+
+
+    <main>
+
+      <img src="images/chat0.png" class="slide" alt="">
+      <img src="images/chat2.png" class="slide" alt="">
+      <img src="images/chat1.png" class="slide" alt="">
+
+
+
+    </main>
+
+    <div class="btn">
+      <button onclick="goPrev()">
+        &#8592
+      </button>
+      <button onclick="goNext()">
+        &#8594
+      </button>
+    </div>
+
+
+    <script src="myscripts.js"></script>
+  </body>
 </html>
