--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="sidebar">
         <a href="#home">HOME</a>
         <a href="https://wa.me/919110804206?text=contact%20info">CONTACT</a>
-        <a href="https://drive.google.com/file/d/1IUV1T3Nl1ZBifRM8SUJ-1zIRNuCv6WJX/view?usp=drivesdk">RESUME</a>
+        <a href="https://drive.google.com/file/d/1R6dJeILHoDpvNWgogNfQmDLNRqHMPEp6/view?usp=drive_link">RESUME</a>
         <a href="projects.html">PROJECTS</a>
         <!-- <a href="https://github.com/khameer13?tab=repositories">GITHUB</a> -->
       </div>
