--- a/onlineFeedbackSysytem.html
+++ b/onlineFeedbackSysytem.html
@@ -1,12 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
-<body>
-    login
-</body>
+    <link rel="stylesheet" href="style1.css" />
+  </head>
+  <body>
+    <!-- <section class="hero"> -->
+    <h1>OnlineFeedbackSysytem</h1>
+    <!-- </section> -->
+
+
+    <main>
+
+      <img src="OnlineFeedBack/Screenshot (29).png" class="slide" alt="">
+      <img src="OnlineFeedBack/Screenshot (30).png" class="slide" alt="">
+      <img src="OnlineFeedBack/Screenshot (31).png" class="slide" alt="">
+      <img src="OnlineFeedBack/Screenshot (32).png" class="slide" alt="">
+      <img src="OnlineFeedBack/Screenshot (33).png" class="slide" alt="">
+      <img src="OnlineFeedBack/Screenshot (34).png" class="slide" alt="">
+      <img src="OnlineFeedBack/Screenshot (35).png" class="slide" alt="">
+      <img src="OnlineFeedBack/Screenshot (36).png" class="slide" alt="">
+      <img src="OnlineFeedBack/Screenshot (37).png" class="slide" alt="">
+      <img src="OnlineFeedBack/Screenshot (38).png" class="slide" alt="">
+      <img src="OnlineFeedBack/Screenshot (39).png" class="slide" alt="">
+      <img src="OnlineFeedBack/Screenshot (40).png" class="slide" alt="">
+      <img src="OnlineFeedBack/Screenshot (41).png" class="slide" alt="">
+      <img src="OnlineFeedBack/Screenshot (42).png" class="slide" alt="">
+      <img src="OnlineFeedBack/Screenshot (43).png" class="slide" alt="">
+    </main>
+
+    <div class="btn">
+      <button onclick="goPrev()">
+        &#8592
+      </button>
+      <button onclick="goNext()">
+        &#8594
+      </button>
+    </div>
+
+
+    <script src="myscripts.js"></script>
+  </body>
 </html>
