--- a/projects.html
+++ b/projects.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects</title>
-    <link rel="stylesheet" href="style2.css">
-</head>
-<style>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Projects</title>
+        <link rel="stylesheet" href="style2.css">
+    </head>
+    <style>
 
   @media (max-width: 768px) {
       .featured-challenges {
@@ -22,43 +22,44 @@
   }
 
 </style>
-<body>
-    <main>
-        <section class="hero">
-            <h1>Projects </h1>
-            <p>Personal and university projects</p>
-        </section>
-        <section class="featured-challenges">
-            <div class="challenge-card">
-                <img src="images/instaclone.jpeg" alt="Project 1">
-                <h3>Instagram Clone</h3>
-                <p> description goes here...</p>
-                <a href="myApp.html" class="cta-button">View Project</a>
-            </div>
-            <div class="challenge-card">
-              <img src="images/feedbacksyetem.jpeg" alt="Project 4">
-              <h3>OnlineFeedbackSysytem</h3>
-              <p>description goes here...</p>
-              <a href="onlineFeedbackSysytem.html" class="cta-button">View Project</a>
-          </div>
-          
-        </section>
-        <section class="featured-challenges">
-            <div class="challenge-card">
-                <img src="images/projects.jpeg" alt="Project 3">
-                <h3>LoginDashboard</h3>
-                <p> description goes here...</p>
-                <a href="LoginDashboardProject.html" class="cta-button">View Project</a>
-            </div>
-            <div class="challenge-card">
-              <img src="images/chatrooms.jpeg" alt="Project 2">
-              <h3>Chat Room</h3>
-              <p>description goes here...</p>
-              <a href="chatRoom.html" class="cta-button">View Project</a>
-          </div>
-         
-        </section>
-    </main>
-</body>
-</html>
+    <body>
+        <main>
+            <section class="hero">
+                <h1>Projects </h1>
+                <p>Personal and university projects</p>
+            </section>
+            <section class="featured-challenges">
+                <div class="challenge-card">
+                    <img src="images/instaclone.jpeg" alt="Project 1">
+                    <h3>Instagram Clone</h3>
+                    <p> Technologies used : Java , XML , Firebase , AndroidStudio </p>
+                    <a href="myApp.html" class="cta-button">View Project</a>
+                </div>
+                <div class="challenge-card">
+                    <img src="images/feedbacksyetem.jpeg" alt="Project 4">
+                    <h3>OnlineFeedbackSysytem</h3>
+                    <p>Technologies used : HTML , CSS , JavaScript , vscode</p>
+                    <a href="onlineFeedbackSysytem.html" class="cta-button">View
+                        Project</a>
+                </div>
 
+            </section>
+            <section class="featured-challenges">
+                <div class="challenge-card">
+                    <img src="images/projects.jpeg" alt="Project 3">
+                    <h3>LoginDashboard</h3>
+                    <p> Technologies used : MERN Stack , JWTs , vscode</p>
+                    <a href="LoginDashboardProject.html" class="cta-button">View
+                        Project</a>
+                </div>
+                <div class="challenge-card">
+                    <img src="images/chatrooms.jpeg" alt="Project 2">
+                    <h3>Chat Room</h3>
+                    <p>Technologies used : Socket.IO , Node.JS ,vscode</p>
+                    <a href="chatRoom.html" class="cta-button">View Project</a>
+                </div>
+
+            </section>
+        </main>
+    </body>
+</html>
