--- a/projects.html
+++ b/projects.html
@@ -8,6 +8,19 @@
     </head>
     <style>
 
+.download-link {
+  display: inline-block;
+  margin-top: 10px;
+  padding: 5px 10px;
+  background-color: #007bff;
+  color: white;
+  text-decoration: none;
+  border-radius: 4px;
+}
+.download-link:hover {
+  background-color: #0056b3;
+}
+
   @media (max-width: 768px) {
       .featured-challenges {
           display: flex;
@@ -57,6 +70,7 @@
                     <h3>Chat Room</h3>
                     <p>Technologies used : Socket.IO , Node.JS ,vscode</p>
                     <a href="chatRoom.html" class="cta-button">View Project</a>
+                    <a class="download-link" href="FriendVerse.apk" download>Download User Manual (PDF)</a>
                 </div>
 
             </section>
