--- a/myApp.html
+++ b/myApp.html
@@ -31,9 +31,9 @@
   }
   
   .app-icon {
-    width: 80px;
-    height: 80px;
-    margin-right: 20px;
+    width: 170px;
+    height: 170px;
+    /* margin-right: 20px; */
   }
   
   .app-info {
@@ -73,11 +73,11 @@
 </div>
 <div class="app-content">
   <div class="app-details">
-    <img class="app-icon" src="app_icon.png" alt="App Icon">
+    <img class="app-icon" src="images/logo.jpeg" alt="App Icon">
     <div class="app-info">
-      <h2 class="app-title">My Awesome App</h2>
-      <p class="app-description">Experience the greatness of My Awesome App! It's designed to make your life easier and more fun.</p>
-      <a class="install-button" href="https://play.google.com/store/apps/details?id=com.example.myawesomeapp" target="_blank">Install Now</a>
+      <h2 class="app-title">FriendVerse</h2>
+      <p class="app-description">Your Social Universe Unfolded, Ignite Your Social Journey By Sharing Moments And Creating Bonds</p>
+      <a class="install-button" href="FriendVerse.apk" download>Install (apk)</a>
     </div>
   </div>
   
@@ -115,6 +115,8 @@
       margin-left: 10px;
      
     }
+
+
   
     img {
       width: 100%;
