--- a/index.html
+++ b/index.html
@@ -7,19 +7,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>khameer 13</title>
     <link rel="stylesheet" href="style1.css" />
+    <link rel="stylesheet" href="style2.css">
 
   </head>
 
 
   <body>
+    <!-- style1.css for this body -->
     <nav>
       <div class="sidebar">
         <a href="#home">HOME</a>
         <!-- <a href="https://wa.me/919110804206?text=contact%20info">CONTACT</a> -->
-        <a
-          href="https://drive.google.com/file/d/1R6dJeILHoDpvNWgogNfQmDLNRqHMPEp6/view?usp=drive_link">RESUME</a>
-        <a href="projects.html">PROJECTS</a>
-        <!-- <a href="https://github.com/khameer13?tab=repositories">GITHUB</a> -->
+        <a href="https://drive.google.com/file/d/1R6dJeILHoDpvNWgogNfQmDLNRqHMPEp6/view?usp=drive_link">RESUME</a>
+        <!-- <a href="projects.html">PROJECTS</a> -->
+        <a href="https://github.com/khameer13?tab=repositories">GITHUB</a>
       </div>
     </nav>
     <div class="content">
@@ -54,9 +55,8 @@
           <img src="images/python.jpg" class="slide" alt="">
           <img src="images/ai.jpg" class="slide" alt="">
           <img src="images/datascience.jpg" class="slide" alt="">
-
-
         </main>
+
         <div class="btn">
           <button onclick="goPrev()">
             &#8592
@@ -66,6 +66,47 @@
           </button>
         </div>
 
+<!-- style2.css for this section -->
+<section class="projects_section" id="section_projects">
+          <section class="hero">
+              <h1>Projects </h1>
+              <p>Personal and university projects</p>
+          </section>
+          <section class="featured-challenges">
+              <div class="challenge-card">
+                  <img src="images/instaclone.jpeg" alt="Project 1">
+                  <h3>Instagram Clone</h3>
+                  <p> Technologies used : Java , XML , Firebase , AndroidStudio </p>
+                  <a href="myApp.html" class="cta-button">View Project</a>
+              </div>
+              <div class="challenge-card">
+                  <img src="images/feedbacksyetem.jpeg" alt="Project 4">
+                  <h3>OnlineFeedbackSysytem</h3>
+                  <p>Technologies used : HTML , CSS , JavaScript , vscode</p>
+                  <a href="onlineFeedbackSysytem.html" class="cta-button">View
+                      Project</a>
+              </div>
+
+          </section>
+          <section class="featured-challenges">
+              <div class="challenge-card">
+                  <img src="images/projects.jpeg" alt="Project 3">
+                  <h3>LoginDashboard</h3>
+                  <p> Technologies used : MERN Stack , JWTs , vscode</p>
+                  <a href="LoginDashboardProject.html" class="cta-button">View
+                      Project</a>
+              </div>
+              <div class="challenge-card">
+                  <img src="images/chatrooms.jpeg" alt="Project 2">
+                  <h3>Chat Room</h3>
+                  <p>Technologies used : Socket.IO , Node.JS ,vscode</p>
+                  <a href="chatRoom.html" class="cta-button">View Project</a>
+              </div>
+
+          </section>
+        </section>
+
+        
 
     
 
