--- a/onlineFeedbackSysytem.html
+++ b/onlineFeedbackSysytem.html
@@ -41,6 +41,10 @@
       </button>
     </div>
 
+    <div class="download-links">
+      <a class="download-link" href="FriendVerse.apk" download>Download(PDF)</a>
+      <a class="github-link" href="#">GITHUB</a>
+    </div>
 
     <script src="myscripts.js"></script>
   </body>
