--- a/chatRoom.html
+++ b/chatRoom.html
@@ -33,6 +33,11 @@
     </div>
 
 
+    <div class="download-links">
+      <a class="download-link" href="FriendVerse.apk" download>Download(PDF)</a>
+      <a class="github-link" href="#">GITHUB</a>
+    </div>
+
     <script src="myscripts.js"></script>
   </body>
 </html>
