--- a/onlineFeedbackSysytem.html
+++ b/onlineFeedbackSysytem.html
@@ -4,14 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>OnlineFeedbackSystem</title>
     <link rel="stylesheet" href="style1.css" />
   </head>
   <body>
     <!-- <section class="hero"> -->
-    <h1>OnlineFeedbackSysytem</h1>
+      <h1>Online FeedbackSysytem</h1>
     <!-- </section> -->
 
+
+    <div style="margin-bottom: 20px;">
+      <p style="width:80%; margin-left: auto; margin-right: auto; font-size:
+        large;">The purpose of this project is to make the process of taking
+        feedback
+        from the students in online regarding the lecturer’s teaching. With
+        this, the institutes can access the feedback reports in a faster way and
+        without any loss of data. As of now this task was done manually with the
+        use of papers and pens. This has many drawbacks and evaluating this hand
+        written forms is a difficult process.
+      </p><p style="width:80%; margin-left: auto; margin-right: auto; font-size:
+        large;">
+        Student needs to logging into the website of online feedback system and
+        giving his/her feedback and can perform modifications too. But the
+        restriction here is once the student submits the report then he cannot
+        modify it later. With this the student can successfully submit feedback
+        on lecturer’s teaching in a very efficient manner without any loss of
+        data. The administrator and the faculty members can access these
+        feedbacks from the students and take appropriate actions.
+      </p>
+    </div>
+
+
+    <div class="download-links">
+      <a class="download-link" href="OnlineFeedbackSystem.pdf" download>Download(PDF)</a>
+      <a class="github-link" href="#">GITHUB</a>
+    </div>
 
     <main>
 
@@ -41,10 +68,45 @@
       </button>
     </div>
 
-    <div class="download-links">
-      <a class="download-link" href="FriendVerse.apk" download>Download(PDF)</a>
-      <a class="github-link" href="#">GITHUB</a>
+    <div style="height: 700px;">
+      <h1>What is Online Feedback System all about?</h1>
+
+      <p style="width:80%; margin-left: auto; margin-right: auto; font-size:
+        large;">
+        In today's world of online interaction, electronic education is becoming
+        an important, of the academic domain. Faced with the strong growth of
+        popularity of online courses, a need arises for a flexible, strengthened
+        & easily integrated online academic feedback delivery system The
+        ‘Feedback management System’ Approaches all about institutional and
+        educational practices and processes that are taken into consideration,
+        the student’s concerns of the level of the knowledge they receive. This
+        procedure explains that there is a good relationship between the
+        students learning environment and teachers.
+      </p>
+      <p style="width:80%; margin-left: auto; margin-right: auto; font-size:
+        large;">
+        We have developed faculty feedback system to provide feedback in an easy
+        and consistent manner to the college HOD or principal. We call it
+        faculty feedback system which delivers via student staffs interface as
+        online system which is acting as Service Provider.
+      </p>
+
+    
+
+        <ol  style="width:80%; margin-left: auto; margin-right: auto; font-size:
+        large; margin-top: 20px; ">       
+       <li><b>This proposed system consists of following features:</b> </li> 
+       <li>  • Security of data</li> 
+       <li> • Ensure data accuracy</li> 
+       <li>• Minimize manual data entry</li> 
+       <li> • Greater efficiency</li> 
+       <li>  • Better service</li> 
+        <li> • User friendliness and interactive</li> 
+        <li> • Minimum time required</li> 
+      </ol>
+ 
     </div>
+
 
     <script src="myscripts.js"></script>
   </body>
