--- a/chatRoom.html
+++ b/chatRoom.html
@@ -40,7 +40,7 @@
 
     <div class="download-links">
       <a class="download-link" href="ChatRoom.pdf" download>Download(PDF)</a>
-      <a class="github-link" href="#">GITHUB</a>
+      <a class="github-link" href="https://github.com/khameer13/chatapp">GITHUB</a>
     </div>
     <main>
 
