--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                   src="images/gfg.jpg"
                   alt="GEEKSFORGEEKS!" /></a>
               <a href="https://wa.me/919110804206?text=contact%20info"><img
-                  src="images/Instagram.jpg" 
+                  src="images/whatsappLogo.png" 
                   alt="WHATSAPP!" /></a>
            </div>
 
