--- a/myApp.html
+++ b/myApp.html
@@ -77,7 +77,7 @@
     <div class="app-info">
       <h2 class="app-title">FriendVerse</h2>
       <p class="app-description">Your Social Universe Unfolded, Ignite Your Social Journey By Sharing Moments And Creating Bonds</p>
-      <a class="install-button" href="FriendVerse.apk" download>Install (apk)</a>
+      <a class="install-button" href="FriendVerse" download>Install (apk)</a>
     </div>
   </div>
   
